--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-actions.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-actions.html
@@ -1,9 +1,9 @@
-<div uib-dropdown dropdown-append-to-body ng-if="actions.list.length">
+<div uib-dropdown dropdown-append-to-body ng-if="actions.allowedActions.length">
   <a href class="btn btn-default btn-inline" uib-dropdown-toggle>
     <i class="fa fa-ellipsis-v"></i>
   </a>
   <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-    <li ng-repeat="action in actions.list"
+    <li ng-repeat="action in actions.allowedActions"
       ng-switch="!action.isDirectAction">
       <a href
         ng-switch-when="true"
