--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
@@ -4,7 +4,7 @@
   </header>
   <crm-loading show="!month.month.loading">
     <div class="chr_leave-calendar__month-body">
-      <div class="table-responsive" ng-switch="!!month.contacts.length">
+      <div class="table-responsive" ng-switch="!!month.contactsList()">
         <div class="text-center" ng-switch-when="false">
           Sorry No Contacts
         </div>
@@ -19,7 +19,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="chr_leave-calendar__items" ng-repeat="contact in month.contacts | limitTo: month.pageSize: month.currentPage * month.pageSize">
+            <tr class="chr_leave-calendar__items" ng-repeat="contact in month.contactsList() | limitTo: month.pageSize: month.currentPage * month.pageSize">
               <td class="chr_leave-calendar__name" ng-if="month.showContactName">{{contact.display_name}}</td>
               <td ng-repeat="day in month.month.days track by day.date">
                 <leave-calendar-day contact-data="day.contactsData[contact.id]"></leave-calendar-day>
@@ -27,11 +27,11 @@
             </tr>
           </tbody>
         </table>
-        <div class="chr_leave-calendar__pagination text-center" ng-if="month.contacts.length > month.pageSize">
+        <div class="chr_leave-calendar__pagination text-center" ng-if="month.contactsList().length > month.pageSize">
           <button class="btn-link" ng-disabled="month.currentPage == 0" ng-click="month.currentPage = (month.currentPage - 1)">
             <i class="fa fa-lg fa-arrow-left"></i>
           </button>
-          <button class="btn-link" ng-disabled="month.currentPage >= month.contacts.length / month.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
+          <button class="btn-link" ng-disabled="month.currentPage >= month.contactsList().length / month.pageSize - 1" ng-click="month.currentPage = (month.currentPage + 1)">
             <i class="fa fa-lg fa-arrow-right"></i>
           </button>
         </div>
