PCHR-2240: Refactor leave-calendar css

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-month.html
@@ -12,7 +12,7 @@
           <thead>
             <tr class="chr_leave-calendar__days">
               <th class="chr_leave-calendar__name" ng-if="month.showContactName">Employee Name</th>
-              <th ng-repeat="day in month.month.days track by day.date">
+              <th class="chr_leave-calendar__day" ng-repeat="day in month.month.days track by day.date">
                 {{day.name}}
                 <div>{{day.index}}</div>
               </th>
