--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -23,6 +23,10 @@ $chr-leave-calendar-legend-size:                  20px;
   }
 }
 
+.chr_leave-calendar__day--disabled {
+  opacity: 0.5;
+}
+
 
 .chr_leave-calendar__item {
   color: #FFF;
@@ -43,6 +47,11 @@ $chr-leave-calendar-legend-size:                  20px;
     cursor: pointer;
     @include absolute-centered();
   }
+}
+
+.chr_leave-calendar__item--disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 
 // Public Holiday, Weekend and Non Working day needs to be specified before other styles
