PCHR-2240: Force current day color

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/scss/components/_leave-calendar.scss
@@ -28,7 +28,7 @@ $chr-leave-calendar-legend-size:                  20px;
 }
 
 .chr_leave-calendar__day--current {
-  color: $brand-primary;
+  color: $brand-primary !important;
 }
 
 
