PCHR-2462: Rename leave request creation dropdown component

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,10 +1,10 @@
 <div class="absence-tab-page">
   <div class="container">
-    <leave-request-create-dropdown
+    <record-leave-request
       btn-class="btn-primary"
       contact-id="absence.contactId"
       selected-contact-id="$root.settings.contactId">
-    </leave-request-create-dropdown>
+    </record-leave-request>
     <uib-tabset
       active="active"
       type="pills"
