--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -1,9 +1,9 @@
 <div class="manager-leave-page">
   <div class="button-container">
-    <leave-request-create-dropdown
+    <record-leave-request
       btn-class="btn-primary"
       contact-id="managerLeave.contactId">
-    </leave-request-create-dropdown>
+    </record-leave-request>
   </div>
   <div class="tabs-container">
     <div class="container">
