PCHR-2462: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/admin-dashboard/components/admin-dashboard-container.html
@@ -1,10 +1,10 @@
 <div class="admin-dashboard-page">
   <div class="crm_page__topbar">
     <div class="pull-right">
-      <record-leave-request
+      <leave-request-record-actions
         btn-class="btn-default-outline"
         contact-id="$root.settings.contactId">
-      </record-leave-request>
+      </leave-request-record-actions>
     </div>
   </div>
   <div class="chr_admin-dashboard_content pull-right">
