--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-container.html
@@ -1,11 +1,11 @@
 <div class="my-leave-page">
   <div class="button-container">
-    <record-leave-request
+    <leave-request-record-actions
       btn-class="btn-primary"
       contact-id="myleave.contactId"
       selected-contact-id="myleave.contactId"
       is-self-record="true">
-    </record-leave-request>
+    </leave-request-record-actions>
   </div>
   <div class="tabs-container">
     <div class="container">
