--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -1,10 +1,10 @@
 <div class="absence-tab-page">
   <div class="container">
-    <record-leave-request
+    <leave-request-record-actions
       btn-class="btn-primary"
       contact-id="absence.contactId"
       selected-contact-id="$root.settings.contactId">
-    </record-leave-request>
+    </leave-request-record-actions>
     <uib-tabset
       active="active"
       type="pills"
