PCHR-2435: PR Feedback
PCHR-2435: Update session`s contact id

PCHR-2435: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-comments-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup/leave-request-popup-comments-tab.html
@@ -1,4 +1,4 @@
-<crm-loading show="!$ctrl.loading.loggedInContactId">
+<crm-loading show="!$ctrl.loading.component">
   <div
     class="text-center chr_leave-request-modal__comments_empty"
     ng-show="commentsCtrl.getActiveComments().length === 0">
