--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
@@ -115,7 +115,7 @@
             </li>
           </ul>
           <div class="col-xs-9">
-            <table class="table table-clean">
+            <table class="table table-clean table-hover">
               <thead>
               <tr>
                 <th>Employee Name</th>
@@ -126,7 +126,11 @@
               </tr>
               </thead>
               <tbody>
-              <tr ng-repeat="request in vm.leaveRequests.table.list track by request.id">
+              <tr
+                class="pointer"
+                leave-request-popup leave-request="request"
+                is-self-record="$root.section === 'my-leave'"
+                ng-repeat="request in vm.leaveRequests.table.list track by request.id">
                 <td style="width: 25%;">{{vm.getUserNameByID(request.contact_id)}}</td>
                 <td style="width: 20%;">{{vm.getAbsenceTypesByID(request.type_id)}}</td>
                 <td style="width: 25%;">{{request.from_date}} - {{request.to_date}}</td>
