--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-notification-badge/components/manager-notification-badge.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-notification-badge/components/manager-notification-badge.html
@@ -1,1 +1,1 @@
-<leave-notification event-name="managerNotificationBadge.eventName"></leave-notification>
+<leave-notification-badge event-name="managerNotificationBadge.eventName"></leave-notification-badge>
