PCHR-1972: PR Feedback 2

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-notification-badge/components/manager-notification-badge.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-notification-badge/components/manager-notification-badge.html
@@ -1,1 +1,5 @@
-<leave-notification-badge event-name="managerNotificationBadge.eventName"></leave-notification-badge>
+<leave-notification-badge
+  ng-if="managerNotificationBadge.filters"
+  filters="managerNotificationBadge.filters"
+  refresh-count-event-name="managerNotificationBadge.refreshCountEventName">
+</leave-notification-badge>
