--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -14,6 +14,9 @@
         <li ui-sref-active="active">
           <a ui-sref="manager-leave.calendar">Calendar</a>
         </li>
+        <li ui-sref-active="active">
+          <a ui-sref="manager-leave.balance-report">Leave Balance</a>
+        </li>
       </ul>
       <div class="tab-content">
         <div ui-view></div>
