PCHR-2483: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-notification-badge.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-notification-badge.html
@@ -1,4 +1,4 @@
-<span ng-if="!badge.loading.count && badge.count > 0" class="chr_leave_notification badge badge-primary">
-  <span>{{badge.count}}</span>
+<span ng-if="badge.count > 0" class="chr_leave_notification badge badge-primary">
+  {{badge.count}}
 </span>
 
