--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
@@ -128,7 +128,7 @@
               <tbody>
               <tr
                 class="pointer"
-                leave-request-popup leave-request="request"
+                ng-click="vm.openLeavePopup(request)"
                 ng-repeat="request in vm.leaveRequests.table.list track by request.id">
                 <td style="width: 25%;">{{vm.getUserNameByID(request.contact_id)}}</td>
                 <td style="width: 20%;">{{vm.getAbsenceTypesByID(request.type_id)}}</td>
