--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-record-actions.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-request-record-actions.html
@@ -5,9 +5,7 @@
   <ul class="dropdown-menu" role="menu" uib-dropdown-menu>
     <li ng-repeat="option in vm.leaveRequestOptions">
       <a href
-        leave-request-popup leave-type="{{option.type}}"
-        selected-contact-id="vm.selectedContactId"
-        is-self-record="vm.isSelfRecord">
+         ng-click="vm.openLeavePopup(null, option.type, vm.selectedContactId, vm.isSelfRecord)">
         <i class="fa fa-{{option.icon}}" aria-hidden="true"></i> {{option.label}}
       </a>
     </li>
