--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manager-leave-calendar-month.html
@@ -41,9 +41,7 @@
             <span ng-if="day.UI.isPM">PM</span>
             <span ng-if="day.UI.isAccruedTOIL">AT</span>
             <a ng-if="day.leaveRequest"
-               contact-id="calendar.contactId"
-               leave-request-popup
-               leave-request="day.leaveRequest"
+               ng-click="calendar.openLeavePopup(day.leaveRequest)"
                title="Click to open this leave request">
             </a>
           </div>
