--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-balance-report.html
@@ -39,33 +39,31 @@
   </div>
   <div class="chr_leave-balance-report__report panel panel-default">
     <div class="panel-body">
-      <h4>Results <span class="chr_leave-balance-report__results-value">(123)</span></h4>
+      <h4>Results <span class="chr_leave-balance-report__results-value">({{ vm.reportCount }})</span></h4>
       <div class="chr_leave-balance-report__overflow-scroll">
         <table class="table table-responsive">
           <tbody>
             <tr>
               <th colspan="2"></th>
-              <th colspan="4">Holiday</th>
-              <th colspan="4">Toil</th>
-              <th colspan="4">Sickness</th>
+              <th colspan="4" ng-repeat="type in vm.absenceTypes">{{ type.title }}</th>
             </tr>
             <tr>
               <th class="chr_leave-balance-report__contact-id-column">Contact ID</th>
               <th class="chr_leave-balance-report__name-column">Name</th>
-              <th ng-repeat-start="absenceTypes in [1,2,3]">Entitlement</th>
+              <th ng-repeat-start="absenceTypes in vm.absenceTypes">Entitlement</th>
               <th>Used</th>
               <th>Balance</th>
               <th ng-repeat-end>Requested</th>
             </tr>
           </tbody>
           <tbody>
-            <tr ng-repeat="staff in [1,2,3,4,5,6]">
-              <td><a href="#">197</a></td>
-              <td><a href="#">Jon Snow</a></td>
-              <td ng-repeat-start="values in [1,2,3]">4</td>
-              <td>3</td>
-              <td>2</td>
-              <td ng-repeat-end>1</td>
+            <tr ng-repeat="record in vm.report">
+              <td><a href="#">{{ record.contact_id }}</a></td>
+              <td><a href="#">{{ record.contact_display_name }}</a></td>
+              <td ng-repeat-start="values in record.absence_types">{{ values.entitlement }}</td>
+              <td>{{ values.used }}</td>
+              <td>{{ values.balance }}</td>
+              <td ng-repeat-end>{{ values.requested }}</td>
             </tr>
           </tbody>
         </table>
