PCHR-2350: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
@@ -93,7 +93,7 @@
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" ng-change = "vm.pendingRequestListener()"
+            <input type="checkbox" ng-change="vm.refresh(1, true)"
               ng-model="vm.filters.leaveRequest.pending_requests">Pending only
           </label>
         </div>
