PCHR-2287: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/manage-leave-requests.html
@@ -98,8 +98,9 @@
           </label>
         </div>
       </div>
-      <crm-loading show="!vm.loading.filter">
-        <div class="panel-body row chr_manage_leave_requests__panel_body">
+      <crm-loading show="!vm.loading.content">
+        <div ng-hide="!vm.loading.table && !vm.leaveRequests.table.list.length"
+           class="panel-body row chr_manage_leave_requests__panel_body">
           <ul class="col-xs-3 nav nav-pills nav-stacked chr_vertical_tabs">
             <li ng-repeat="status in vm.leaveRequestStatuses track by status.value"
               ng-hide="vm.filterLeaveRequestByStatus(status).length === 0"
