--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/components/leave-calendar-day.html
@@ -14,8 +14,7 @@
   <a ng-if="day.contactData.leaveRequest"
     contact-id="contact.id"
     selected-contact-id="$root.settings.contactId"
-    leave-request-popup
-    leave-request="day.contactData.leaveRequest"
+    ng-click="day.openLeavePopup($event, day.contactData.leaveRequest, null, null, $root.section === 'my-leave')"
     title="Click to open this leave request">
   </a>
 </div>
